welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value maths
	if ( maths.abs(100 - n) <= 10 ) {
             ^